# app/request/role.go
@@ -9,11 +9,26 @@ import (
 // Roles 请求验证
 type Roles struct {
 	base.BaseRequest
-	ID     int64  `json:"id" form:"id" validate:"required|int|gt:0" label:"ID"`
-	Name   string `json:"name" form:"name" validate:"required|max:255" label:"角色名称"`
-	Desc   string `json:"desc" form:"desc" validate:"required|max:255" label:"角色描述"`
+	ID     int64  `uri:"id" form:"id" validate:"required|int|gt:0" label:"ID"`
+	Name   string `json:"name" form:"name" validate:"required|minLen:1|maxLen:20" label:"角色名称"`
+	Desc   string `json:"desc" form:"desc" validate:"maxLen:100" label:"角色描述"`
 	Status int64  `json:"status" form:"status" validate:"required|int" label:"状态 1=启用 2=停用"`
 	PageListValidate
+}
+
+// RoleCreate 角色创建验证
+type RoleCreate struct {
+	Name   string `json:"name" validate:"required|minLen:1|maxLen:20" label:"角色名称"`
+	Desc   string `json:"desc" validate:"maxLen:100" label:"角色描述"`
+	Status int64  `json:"status" validate:"required|int" label:"状态 1=启用 2=停用"`
+}
+
+// RoleUpdate 角色更新验证
+type RoleUpdate struct {
+	ID     int64  `uri:"id" validate:"required|int|gt:0" label:"ID"`
+	Name   string `json:"name" validate:"required|minLen:1|maxLen:20" label:"角色名称"`
+	Desc   string `json:"desc" validate:"maxLen:100" label:"角色描述"`
+	Status int64  `json:"status" validate:"required|int" label:"状态 1=启用 2=停用"`
 }
 
 // Validate 请求验证
@@ -30,11 +45,11 @@ func (s Roles) Validate(data Roles, scene string) error {
 // - 也可以添加验证设置
 func (s Roles) ConfigValidation(v *validate.Validation) {
 	scenes := validate.SValues{
-		"list":   []string{"PageListValidate.Page", "PageListValidate.PageSize"},
-		"create": []string{"Name", "Desc", "Status"},
-		"update": []string{"ID", "Name", "Desc", "Status"},
-		"detail": []string{"ID"},
-		"delete": []string{"ID"},
+		"List":   []string{"PageListValidate.Page", "PageListValidate.PageSize"},
+		"Create": []string{"Name", "Desc", "Status"},
+		"Update": []string{"ID", "Name", "Desc", "Status"},
+		"Detail": []string{"ID"},
+		"Delete": []string{"ID"},
 	}
 	v.WithScenes(scenes)
 }
@@ -45,7 +60,8 @@ func (s Roles) Messages() map[string]string {
 		"required":    "字段 {field} 必填",
 		"int":         "字段 {field} 必须为整数",
 		"gt":          "字段 {field} 必须大于 0",
-		"max":         "字段 {field} 长度不能超过 255",
+		"minLen":      "{field} 长度不能少于 {min} 个字符",
+		"maxLen":      "{field} 长度不能超过 {max} 个字符",
 		"Page.gt":     "页码必须大于 0",
 		"PageSize.gt": "每页数量必须大于 0",
 	}
